// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput SNAPSHOTS should render basic usage 1`] = `
<MaskedInput
  mask="+# (###) ###-##-##"
  value="79521806763"
>
  <Wrapper
    className="masked-wrapper"
  >
    <Div
      className="masked-wrapper"
    >
      <div
        className="masked-wrapper"
      >
        <Div
          className="masked-input-wrapper"
        >
          <div
            className="masked-input-wrapper"
          >
            <Input
              aria-invalid={false}
              className="masked-input-element"
              mask="+# (###) ###-##-##"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="79521806763"
            >
              <MaskedInputBase
                aria-invalid={false}
                className="masked-input-element"
                mask="+# (###) ###-##-##"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value="79521806763"
              >
                <input
                  aria-invalid={false}
                  className="masked-input-element"
                  disabled={false}
                  maxLength={18}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onPaste={[Function]}
                  value="+7 (952) 180-67-63"
                />
              </MaskedInputBase>
            </Input>
          </div>
        </Div>
        <InvalidMessageWrapper>
          <InvalidMessage
            isValid={true}
          >
            <InvalidMessage
              isValid={true}
            />
          </InvalidMessage>
        </InvalidMessageWrapper>
      </div>
    </Div>
  </Wrapper>
</MaskedInput>
`;

exports[`MaskedInput SNAPSHOTS should render different component states should render disabled 1`] = `
<MaskedInput
  disabled={true}
  mask="+# (###) ###-##-##"
  onChange={[MockFunction]}
>
  <Wrapper
    className="masked-wrapper"
  >
    <Div
      className="masked-wrapper"
    >
      <div
        className="masked-wrapper"
      >
        <Div
          className="masked-input-wrapper"
        >
          <div
            className="masked-input-wrapper"
          >
            <Input
              aria-invalid={false}
              className="masked-input-element"
              disabled={true}
              mask="+# (###) ###-##-##"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              value=""
            >
              <MaskedInputBase
                aria-invalid={false}
                className="masked-input-element"
                disabled={true}
                mask="+# (###) ###-##-##"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                value=""
              >
                <input
                  aria-invalid={false}
                  className="masked-input-element"
                  disabled={true}
                  maxLength={19}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onPaste={[Function]}
                  value=""
                />
              </MaskedInputBase>
            </Input>
          </div>
        </Div>
        <InvalidMessageWrapper>
          <InvalidMessage
            isValid={true}
            messages={Array []}
          >
            <InvalidMessage
              isValid={true}
              messages={Array []}
            />
          </InvalidMessage>
        </InvalidMessageWrapper>
      </div>
    </Div>
  </Wrapper>
</MaskedInput>
`;

exports[`MaskedInput SNAPSHOTS should render different component states should render placeholder 1`] = `
<MaskedInput
  mask="+# (###) ###-##-##"
  onChange={[MockFunction]}
  value="79521806763"
>
  <Wrapper
    className="masked-wrapper"
  >
    <Div
      className="masked-wrapper"
    >
      <div
        className="masked-wrapper"
      >
        <Div
          className="masked-input-wrapper"
        >
          <div
            className="masked-input-wrapper"
          >
            <Input
              aria-invalid={false}
              className="masked-input-element"
              mask="+# (###) ###-##-##"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              value="79521806763"
            >
              <MaskedInputBase
                aria-invalid={false}
                className="masked-input-element"
                mask="+# (###) ###-##-##"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                value="79521806763"
              >
                <input
                  aria-invalid={false}
                  className="masked-input-element"
                  disabled={false}
                  maxLength={19}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onPaste={[Function]}
                  value="+7 (952) 180-67-63"
                />
              </MaskedInputBase>
            </Input>
          </div>
        </Div>
        <InvalidMessageWrapper>
          <InvalidMessage
            isValid={true}
            messages={Array []}
          >
            <InvalidMessage
              isValid={true}
              messages={Array []}
            />
          </InvalidMessage>
        </InvalidMessageWrapper>
      </div>
    </Div>
  </Wrapper>
</MaskedInput>
`;

exports[`MaskedInput SNAPSHOTS should render value in controllable mode 1`] = `
<MaskedInput
  mask="+# (###) ###-##-##"
  onChange={[MockFunction]}
  value="79521806763"
>
  <Wrapper
    className="masked-wrapper"
  >
    <Div
      className="masked-wrapper"
    >
      <div
        className="masked-wrapper"
      >
        <Div
          className="masked-input-wrapper"
        >
          <div
            className="masked-input-wrapper"
          >
            <Input
              aria-invalid={false}
              className="masked-input-element"
              mask="+# (###) ###-##-##"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="79521806763"
            >
              <MaskedInputBase
                aria-invalid={false}
                className="masked-input-element"
                mask="+# (###) ###-##-##"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value="79521806763"
              >
                <input
                  aria-invalid={false}
                  className="masked-input-element"
                  disabled={false}
                  maxLength={18}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onPaste={[Function]}
                  value="+7 (952) 180-67-63"
                />
              </MaskedInputBase>
            </Input>
          </div>
        </Div>
        <InvalidMessageWrapper>
          <InvalidMessage
            isValid={true}
          >
            <InvalidMessage
              isValid={true}
            />
          </InvalidMessage>
        </InvalidMessageWrapper>
      </div>
    </Div>
  </Wrapper>
</MaskedInput>
`;

exports[`MaskedInput SNAPSHOTS should render value in controllable mode 2`] = `
<MaskedInput
  mask="+# (###) ###-##-##"
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "target": Object {
              "name": undefined,
              "rawValue": "32085556478",
              "value": "+3 (208) 555-64-78",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  value="32085556478"
>
  <Wrapper
    className="masked-wrapper"
  >
    <Div
      className="masked-wrapper"
    >
      <div
        className="masked-wrapper"
      >
        <Div
          className="masked-input-wrapper"
        >
          <div
            className="masked-input-wrapper"
          >
            <Input
              aria-invalid={false}
              className="masked-input-element"
              mask="+# (###) ###-##-##"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="32085556478"
            >
              <MaskedInputBase
                aria-invalid={false}
                className="masked-input-element"
                mask="+# (###) ###-##-##"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value="32085556478"
              >
                <input
                  aria-invalid={false}
                  className="masked-input-element"
                  disabled={false}
                  maxLength={18}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onPaste={[Function]}
                  value="+3 (208) 555-64-78"
                />
              </MaskedInputBase>
            </Input>
          </div>
        </Div>
        <InvalidMessageWrapper>
          <InvalidMessage
            isValid={true}
          >
            <InvalidMessage
              isValid={true}
            />
          </InvalidMessage>
        </InvalidMessageWrapper>
      </div>
    </Div>
  </Wrapper>
</MaskedInput>
`;
